Added Password option in index page

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -10,6 +10,7 @@
 		<div class="container">
 			<a href="{% url 'notes' %}" class="btn btn-dark tool-choices">Notes</a>
 			<a href="{% url 'todo' %}" class="btn btn-dark tool-choices">To-do</a>
+			<a href="{% url 'password' %}" class="btn btn-dark tool-choices">Password Manager/a>
 		</div>
 	{% endif %}
 {% endblock %}
