Added scanner feature

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -11,6 +11,7 @@
 			<a href="{% url 'notes' %}" class="btn btn-dark tool-choices">Notes</a>
 			<a href="{% url 'todo' %}" class="btn btn-dark tool-choices">To-do</a>
 			<a href="{% url 'password' %}" class="btn btn-dark tool-choices">Password Manager</a>
+			<a href="{% url 'scanner' %}" class="btn btn-dark tool-choices">Scanner</a>
 		</div>
 	{% endif %}
 {% endblock %}
