--- a/password/templates/password/layout.html
+++ b/password/templates/password/layout.html
@@ -43,6 +43,9 @@
 	      <li class="nav-item">
 	      	<a href="{% url 'todo' %}" class="nav-link">Todo</a>
 	      </li>
+	      <li class="nav-item">
+	      	<a href="{% url 'scanner' %}" class="nav-link">Scanner</a>
+	      </li>
 	      {% endblock %}
 	    </ul>
 	  </div>
