--- a/todo/templates/todo/layout.html
+++ b/todo/templates/todo/layout.html
@@ -43,6 +43,9 @@
 	      <li class="nav-item">
 	      	<a href="{% url 'password' %}" class="nav-link">Password Manager</a>
 	      </li>
+	      <li class="nav-item">
+	      	<a href="{% url 'scanner' %}" class="nav-link">Scanner</a>
+	      </li>
 	      {% endblock %}
 	    </ul>
 	  </div>
